// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Company Page check onclick behavior 1`] = `
<div>
  <div>
    <div
      class="appContainer"
    >
      <div
        class="sidebar"
      >
        <div
          class="logoContainer"
        >
          <svg
            class="logo"
            style="width: 72px; display: block;"
          />
        </div>
        <nav
          class="sidebarNavigation"
        >
          <a
            class="sidebarLink"
            href="/"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-223 MuiSvgIcon-colorPrimary-224"
              focusable="false"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
              />
            </svg>
            Home
          </a>
          <a
            class="sidebarLink"
            href="/training"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-223 MuiSvgIcon-colorPrimary-224"
              focusable="false"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"
              />
            </svg>
            Training
          </a>
          <a
            class="sidebarLink"
            href="/faq"
          >
            <svg
              color="primary"
              style="font-size: 24px;"
            />
            FAQ
          </a>
        </nav>
      </div>
      <div
        class="appMain"
      >
        <div
          class="headerContainer"
        >
          <div
            class="header"
          >
            <div
              class="upperHeader"
            >
              <nav>
                <a
                  href="/contact"
                >
                  Contact
                </a>
                <a
                  data-testid="global-external-link"
                  href="https://www.bmigroup.com/no/"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  BMI Norway Website
                </a>
              </nav>
            </div>
            <div
              class="midHeader"
            >
              <svg
                class="logo"
                style="width: 50px; display: block;"
              />
              <div
                class="midHeaderNav"
              >
                <button
                  aria-label="aria.notifications"
                  class="MuiButtonBase-root-240 MuiIconButton-root-232 notificationsIcon notificationsIcon--unread"
                  id="notifications-panel-toggle"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label-239"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-223 MuiSvgIcon-colorPrimary-224 MuiSvgIcon-fontSizeLarge-231"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-435"
                  />
                </button>
                <div
                  class="tabletNavButton"
                >
                  <button
                    aria-label="aria.navigation"
                    class="MuiButtonBase-root-240"
                    id="tablet-navigation-panel-toggle"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-223 MuiSvgIcon-colorPrimary-224 MuiSvgIcon-fontSizeLarge-231"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root-435"
                    />
                  </button>
                </div>
                <div
                  class="mobileNavButton"
                >
                  <button
                    aria-label="aria.navigation"
                    class="MuiButtonBase-root-240"
                    id="mobile-navigation-panel-toggle"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-223 MuiSvgIcon-colorPrimary-224 MuiSvgIcon-fontSizeLarge-231"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root-435"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="lowerHeader"
            >
              <div
                class="lowerHeaderMeta"
              >
                <h3
                  class="MuiTypography-root-249 Typography-root-241 MuiTypography-h3-256"
                  data-testid="typography"
                >
                  titleAdmin
                </h3>
                <hr
                  class="MuiDivider-root-279 lowerHeaderDivider MuiDivider-flexItem-285 MuiDivider-vertical-284"
                />
                <h3
                  class="MuiTypography-root-249 lowerHeaderUserLevel Typography-root-241 MuiTypography-h3-256"
                  data-testid="typography"
                />
              </div>
              <div
                class="lowerHeaderNav"
              >
                <button
                  class="MuiButtonBase-root-240 MuiIconButton-root-232 notificationsIcon notificationsIcon--unread"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label-239"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-223 MuiSvgIcon-colorPrimary-224"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-435"
                  />
                </button>
                <div
                  class="makeStyles-root-286"
                >
                  <div>
                    <button
                      aria-haspopup="true"
                      class="MuiButtonBase-root-240 MuiButton-root-288 MuiButton-text-290"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label-289"
                      >
                        <div
                          class="userMenu"
                        >
                          <div
                            class="avatar"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-223"
                              focusable="false"
                              style="width: 20px; color: rgb(238, 238, 238);"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                              />
                            </svg>
                          </div>
                          <div
                            class="userName"
                          >
                            Account
                          </div>
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-223 MuiSvgIcon-colorAction-226"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                            />
                          </svg>
                        </div>
                      </span>
                      <span
                        class="MuiTouchRipple-root-435"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="appContent"
        >
          <div
            class="sidePanelWrapper"
          >
            <div
              class="main"
            >
              <div
                class="sidePanel"
              >
                <div
                  class="filters"
                >
                  <nav>
                    <div
                      class="MuiFormControl-root-332 MuiTextField-root-331 TextField-root-328 TextField-leftAdornment-329 MuiFormControl-fullWidth-335"
                    >
                      <label
                        class="MuiFormLabel-root-344 MuiInputLabel-root-336 MuiInputLabel-formControl-338 MuiInputLabel-animated-341 MuiInputLabel-outlined-343"
                        data-shrink="false"
                        for="filter"
                        id="filter-label"
                      >
                        search.inputLabel
                      </label>
                      <div
                        class="MuiInputBase-root-360 MuiOutlinedInput-root-348 MuiInputBase-fullWidth-367 MuiInputBase-formControl-361 MuiInputBase-adornedEnd-363 MuiOutlinedInput-adornedEnd-351"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input-368 MuiOutlinedInput-input-355 MuiInputBase-inputAdornedEnd-373 MuiOutlinedInput-inputAdornedEnd-359"
                          id="filter"
                          name="filter"
                          type="text"
                          value=""
                        />
                        <div
                          class="MuiInputAdornment-root-375 MuiInputAdornment-positionEnd-378"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-223"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                            />
                          </svg>
                        </div>
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-382 MuiOutlinedInput-notchedOutline-354"
                        >
                          <legend
                            class="PrivateNotchedOutline-legendLabelled-384"
                          >
                            <span>
                              search.inputLabel
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </nav>
                  <div
                    class="filterButtons"
                  >
                    <span>
                      Sort by
                      :
                    </span>
                    <div
                      class="filterButton"
                    >
                      <div
                        class="MuiButtonBase-root-240 MuiChip-root-389 Chip-root-386 MuiChip-colorPrimary-391 MuiChip-clickableColorPrimary-394 MuiChip-clickable-393"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiChip-label-410"
                        >
                          order.labels.ALPHABETICAL
                        </span>
                        <span
                          class="MuiTouchRipple-root-435"
                        />
                      </div>
                    </div>
                    <div
                      class="filterButton"
                    >
                      <div
                        class="MuiButtonBase-root-240 MuiChip-root-389 Chip-root-386 Chip-default-387 MuiChip-clickable-393"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiChip-label-410"
                        >
                          order.labels.UPDATED
                        </span>
                        <span
                          class="MuiTouchRipple-root-435"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="results"
                >
                  <div
                    data-testid="companyCard"
                  >
                    <button
                      class="MuiButtonBase-root-240 MuiCardActionArea-root-418 cardActionArea__isActive"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="MuiCardContent-root-420 main"
                      >
                        <h6
                          class="MuiTypography-root-249 title Typography-root-241 MuiTypography-h6-259"
                          data-testid="typography"
                        >
                          Company 1
                        </h6>
                        <div>
                          <p
                            class="MuiTypography-root-249 Typography-root-241 MuiTypography-body1-251"
                            data-testid="typography"
                            style="display: flex;"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-223 MuiSvgIcon-root-223"
                              focusable="false"
                              style="color: rgb(0, 154, 68);"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                              />
                            </svg>
                            search.profileComplete
                          </p>
                        </div>
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root-223 chevron MuiSvgIcon-colorDisabled-228"
                          focusable="false"
                          style="font-size: 36px;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                          />
                        </svg>
                      </div>
                      <span
                        class="MuiCardActionArea-focusHighlight-419"
                      />
                      <span
                        class="MuiTouchRipple-root-435"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="footerBtn"
                />
              </div>
            </div>
            <div>
              companyDetails
            </div>
          </div>
        </div>
        <div
          class="footer"
        >
          <svg
            style="width: 50px;"
          />
          <nav
            class="footerNav"
          >
            <a
              href="/footer/link/relativePath"
            >
              Footer link title
            </a>
          </nav>
          <svg
            style="width: 120px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Company Page render correctly 1`] = `
<div>
  <div>
    <div
      class="appContainer"
    >
      <div
        class="sidebar"
      >
        <div
          class="logoContainer"
        >
          <svg
            class="logo"
            style="width: 72px; display: block;"
          />
        </div>
        <nav
          class="sidebarNavigation"
        >
          <a
            class="sidebarLink"
            href="/"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1 MuiSvgIcon-colorPrimary-2"
              focusable="false"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
              />
            </svg>
            Home
          </a>
          <a
            class="sidebarLink"
            href="/training"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-1 MuiSvgIcon-colorPrimary-2"
              focusable="false"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"
              />
            </svg>
            Training
          </a>
          <a
            class="sidebarLink"
            href="/faq"
          >
            <svg
              color="primary"
              style="font-size: 24px;"
            />
            FAQ
          </a>
        </nav>
      </div>
      <div
        class="appMain"
      >
        <div
          class="headerContainer"
        >
          <div
            class="header"
          >
            <div
              class="upperHeader"
            >
              <nav>
                <a
                  href="/contact"
                >
                  Contact
                </a>
                <a
                  data-testid="global-external-link"
                  href="https://www.bmigroup.com/no/"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  BMI Norway Website
                </a>
              </nav>
            </div>
            <div
              class="midHeader"
            >
              <svg
                class="logo"
                style="width: 50px; display: block;"
              />
              <div
                class="midHeaderNav"
              >
                <button
                  aria-label="aria.notifications"
                  class="MuiButtonBase-root-18 MuiIconButton-root-10 notificationsIcon notificationsIcon--unread"
                  id="notifications-panel-toggle"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label-17"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-1 MuiSvgIcon-colorPrimary-2 MuiSvgIcon-fontSizeLarge-9"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-213"
                  />
                </button>
                <div
                  class="tabletNavButton"
                >
                  <button
                    aria-label="aria.navigation"
                    class="MuiButtonBase-root-18"
                    id="tablet-navigation-panel-toggle"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-1 MuiSvgIcon-colorPrimary-2 MuiSvgIcon-fontSizeLarge-9"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root-213"
                    />
                  </button>
                </div>
                <div
                  class="mobileNavButton"
                >
                  <button
                    aria-label="aria.navigation"
                    class="MuiButtonBase-root-18"
                    id="mobile-navigation-panel-toggle"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-1 MuiSvgIcon-colorPrimary-2 MuiSvgIcon-fontSizeLarge-9"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root-213"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="lowerHeader"
            >
              <div
                class="lowerHeaderMeta"
              >
                <h3
                  class="MuiTypography-root-27 Typography-root-19 MuiTypography-h3-34"
                  data-testid="typography"
                >
                  titleAdmin
                </h3>
                <hr
                  class="MuiDivider-root-57 lowerHeaderDivider MuiDivider-flexItem-63 MuiDivider-vertical-62"
                />
                <h3
                  class="MuiTypography-root-27 lowerHeaderUserLevel Typography-root-19 MuiTypography-h3-34"
                  data-testid="typography"
                />
              </div>
              <div
                class="lowerHeaderNav"
              >
                <button
                  class="MuiButtonBase-root-18 MuiIconButton-root-10 notificationsIcon notificationsIcon--unread"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label-17"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-1 MuiSvgIcon-colorPrimary-2"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-213"
                  />
                </button>
                <div
                  class="makeStyles-root-64"
                >
                  <div>
                    <button
                      aria-haspopup="true"
                      class="MuiButtonBase-root-18 MuiButton-root-66 MuiButton-text-68"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label-67"
                      >
                        <div
                          class="userMenu"
                        >
                          <div
                            class="avatar"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-1"
                              focusable="false"
                              style="width: 20px; color: rgb(238, 238, 238);"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                              />
                            </svg>
                          </div>
                          <div
                            class="userName"
                          >
                            Account
                          </div>
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-1 MuiSvgIcon-colorAction-4"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                            />
                          </svg>
                        </div>
                      </span>
                      <span
                        class="MuiTouchRipple-root-213"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="appContent"
        >
          <div
            class="sidePanelWrapper"
          >
            <div
              class="main"
            >
              <div
                class="sidePanel"
              >
                <div
                  class="filters"
                >
                  <nav>
                    <div
                      class="MuiFormControl-root-110 MuiTextField-root-109 TextField-root-106 TextField-leftAdornment-107 MuiFormControl-fullWidth-113"
                    >
                      <label
                        class="MuiFormLabel-root-122 MuiInputLabel-root-114 MuiInputLabel-formControl-116 MuiInputLabel-animated-119 MuiInputLabel-outlined-121"
                        data-shrink="false"
                        for="filter"
                        id="filter-label"
                      >
                        search.inputLabel
                      </label>
                      <div
                        class="MuiInputBase-root-138 MuiOutlinedInput-root-126 MuiInputBase-fullWidth-145 MuiInputBase-formControl-139 MuiInputBase-adornedEnd-141 MuiOutlinedInput-adornedEnd-129"
                      >
                        <input
                          aria-invalid="false"
                          class="MuiInputBase-input-146 MuiOutlinedInput-input-133 MuiInputBase-inputAdornedEnd-151 MuiOutlinedInput-inputAdornedEnd-137"
                          id="filter"
                          name="filter"
                          type="text"
                          value=""
                        />
                        <div
                          class="MuiInputAdornment-root-153 MuiInputAdornment-positionEnd-156"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-1"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                            />
                          </svg>
                        </div>
                        <fieldset
                          aria-hidden="true"
                          class="PrivateNotchedOutline-root-160 MuiOutlinedInput-notchedOutline-132"
                        >
                          <legend
                            class="PrivateNotchedOutline-legendLabelled-162"
                          >
                            <span>
                              search.inputLabel
                            </span>
                          </legend>
                        </fieldset>
                      </div>
                    </div>
                  </nav>
                  <div
                    class="filterButtons"
                  >
                    <span>
                      Sort by
                      :
                    </span>
                    <div
                      class="filterButton"
                    >
                      <div
                        class="MuiButtonBase-root-18 MuiChip-root-167 Chip-root-164 MuiChip-colorPrimary-169 MuiChip-clickableColorPrimary-172 MuiChip-clickable-171"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiChip-label-188"
                        >
                          order.labels.ALPHABETICAL
                        </span>
                        <span
                          class="MuiTouchRipple-root-213"
                        />
                      </div>
                    </div>
                    <div
                      class="filterButton"
                    >
                      <div
                        class="MuiButtonBase-root-18 MuiChip-root-167 Chip-root-164 Chip-default-165 MuiChip-clickable-171"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiChip-label-188"
                        >
                          order.labels.UPDATED
                        </span>
                        <span
                          class="MuiTouchRipple-root-213"
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="results"
                >
                  <div
                    data-testid="companyCard"
                  >
                    <button
                      class="MuiButtonBase-root-18 MuiCardActionArea-root-196 cardActionArea__isActive"
                      tabindex="0"
                      type="button"
                    >
                      <div
                        class="MuiCardContent-root-198 main"
                      >
                        <h6
                          class="MuiTypography-root-27 title Typography-root-19 MuiTypography-h6-37"
                          data-testid="typography"
                        >
                          Company 1
                        </h6>
                        <div>
                          <p
                            class="MuiTypography-root-27 Typography-root-19 MuiTypography-body1-29"
                            data-testid="typography"
                            style="display: flex;"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-1 MuiSvgIcon-root-1"
                              focusable="false"
                              style="color: rgb(0, 154, 68);"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                              />
                            </svg>
                            search.profileComplete
                          </p>
                        </div>
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root-1 chevron MuiSvgIcon-colorDisabled-6"
                          focusable="false"
                          style="font-size: 36px;"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                          />
                        </svg>
                      </div>
                      <span
                        class="MuiCardActionArea-focusHighlight-197"
                      />
                      <span
                        class="MuiTouchRipple-root-213"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="footerBtn"
                />
              </div>
            </div>
            <div>
              companyDetails
            </div>
          </div>
        </div>
        <div
          class="footer"
        >
          <svg
            style="width: 50px;"
          />
          <nav
            class="footerNav"
          >
            <a
              href="/footer/link/relativePath"
            >
              Footer link title
            </a>
          </nav>
          <svg
            style="width: 120px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Company Page render correctly for installer 1`] = `
<div>
  <div>
    <div
      class="appContainer"
    >
      <div
        class="sidebar"
      >
        <div
          class="logoContainer"
        >
          <svg
            class="logo"
            style="width: 72px; display: block;"
          />
        </div>
        <nav
          class="sidebarNavigation"
        >
          <a
            class="sidebarLink"
            href="/"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-445 MuiSvgIcon-colorPrimary-446"
              focusable="false"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
              />
            </svg>
            Home
          </a>
          <a
            class="sidebarLink"
            href="/training"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root-445 MuiSvgIcon-colorPrimary-446"
              focusable="false"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"
              />
            </svg>
            Training
          </a>
          <a
            class="sidebarLink"
            href="/faq"
          >
            <svg
              color="primary"
              style="font-size: 24px;"
            />
            FAQ
          </a>
        </nav>
      </div>
      <div
        class="appMain"
      >
        <div
          class="headerContainer"
        >
          <div
            class="header"
          >
            <div
              class="upperHeader"
            >
              <nav>
                <a
                  href="/contact"
                >
                  Contact
                </a>
                <a
                  data-testid="global-external-link"
                  href="https://www.bmigroup.com/no/"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  BMI Norway Website
                </a>
              </nav>
            </div>
            <div
              class="midHeader"
            >
              <svg
                class="logo"
                style="width: 50px; display: block;"
              />
              <div
                class="midHeaderNav"
              >
                <button
                  aria-label="aria.notifications"
                  class="MuiButtonBase-root-462 MuiIconButton-root-454 notificationsIcon notificationsIcon--unread"
                  id="notifications-panel-toggle"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label-461"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-445 MuiSvgIcon-colorPrimary-446 MuiSvgIcon-fontSizeLarge-453"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-563"
                  />
                </button>
                <div
                  class="tabletNavButton"
                >
                  <button
                    aria-label="aria.navigation"
                    class="MuiButtonBase-root-462"
                    id="tablet-navigation-panel-toggle"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-445 MuiSvgIcon-colorPrimary-446 MuiSvgIcon-fontSizeLarge-453"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root-563"
                    />
                  </button>
                </div>
                <div
                  class="mobileNavButton"
                >
                  <button
                    aria-label="aria.navigation"
                    class="MuiButtonBase-root-462"
                    id="mobile-navigation-panel-toggle"
                    tabindex="0"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-445 MuiSvgIcon-colorPrimary-446 MuiSvgIcon-fontSizeLarge-453"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                      />
                    </svg>
                    <span
                      class="MuiTouchRipple-root-563"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="lowerHeader"
            >
              <div
                class="lowerHeaderMeta"
              >
                <h3
                  class="MuiTypography-root-471 Typography-root-463 MuiTypography-h3-478"
                  data-testid="typography"
                >
                  titleMember
                </h3>
                <hr
                  class="MuiDivider-root-501 lowerHeaderDivider MuiDivider-flexItem-507 MuiDivider-vertical-506"
                />
                <h3
                  class="MuiTypography-root-471 lowerHeaderUserLevel Typography-root-463 MuiTypography-h3-478"
                  data-testid="typography"
                />
              </div>
              <div
                class="lowerHeaderNav"
              >
                <button
                  class="MuiButtonBase-root-462 MuiIconButton-root-454 notificationsIcon notificationsIcon--unread"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label-461"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root-445 MuiSvgIcon-colorPrimary-446"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.89 2 2 2zm6-6v-5c0-3.07-1.64-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.63 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root-563"
                  />
                </button>
                <div
                  class="makeStyles-root-508"
                >
                  <div>
                    <button
                      aria-haspopup="true"
                      class="MuiButtonBase-root-462 MuiButton-root-510 MuiButton-text-512"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label-511"
                      >
                        <div
                          class="userMenu"
                        >
                          <div
                            class="avatar"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-445"
                              focusable="false"
                              style="width: 20px; color: rgb(238, 238, 238);"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
                              />
                            </svg>
                          </div>
                          <div
                            class="userName"
                          >
                            Account
                          </div>
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-445 MuiSvgIcon-colorAction-448"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                            />
                          </svg>
                        </div>
                      </span>
                      <span
                        class="MuiTouchRipple-root-563"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="appContent"
        >
          <div
            class="sidePanelWrapper"
          >
            <div>
              companyDetails
            </div>
          </div>
        </div>
        <div
          class="footer"
        >
          <svg
            style="width: 50px;"
          />
          <nav
            class="footerNav"
          >
            <a
              href="/footer/link/relativePath"
            >
              Footer link title
            </a>
          </nav>
          <svg
            style="width: 120px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Company Page should not return companies list for installer 1`] = `
Object {
  "props": Object {
    "companies": Array [],
    "companyId": 2,
    "companySSR": Object {
      "__typename": "Company",
      "certifications": Array [],
      "companyDocuments": Object {
        "nodes": Array [],
      },
      "companyMembers": Object {
        "nodes": Array [],
      },
      "companyOperationsByCompany": Object {
        "nodes": Array [],
      },
      "id": 2,
      "isProfileComplete": true,
      "name": "Company 1",
      "referenceNumber": 10001,
      "tier": "T1",
      "updatedAt": "",
    },
    "contactDetailsCollection": Object {
      "items": Array [
        Object {
          "email": "ruthtyler@bmigroup.com",
          "fullName": "Ruth Tyler",
          "phoneNumber": "273482472894",
          "subHeading": "Roofpro Marketing support",
        },
        Object {
          "email": "flatties@bmigroup.com",
          "fullName": "Flat roof hotline",
          "phoneNumber": "0044-12345667",
          "subHeading": "9 to 5 Monday to Friday",
        },
      ],
    },
    "mapsApiKey": undefined,
    "operationTypes": Array [
      Object {
        "displayName": "Flat",
        "type": "FLAT",
      },
    ],
  },
}
`;

exports[`Company Page should return default props with empty companies list 1`] = `
Object {
  "props": Object {
    "companies": Array [],
    "contactDetailsCollection": Object {},
    "mapsApiKey": undefined,
    "operationTypes": Array [
      Object {
        "displayName": "Flat",
        "type": "FLAT",
      },
    ],
  },
}
`;

exports[`Company Page should view company contacts 1`] = `
Object {
  "props": Object {
    "companies": Array [
      Object {
        "__typename": "Company",
        "certifications": Array [],
        "companyDocuments": Object {
          "nodes": Array [],
        },
        "companyMembers": Object {
          "nodes": Array [],
        },
        "companyOperationsByCompany": Object {
          "nodes": Array [],
        },
        "id": 2,
        "isProfileComplete": true,
        "name": "Company 1",
        "referenceNumber": 10001,
        "tier": "T1",
        "updatedAt": "",
      },
    ],
    "companyId": 2,
    "companySSR": Object {
      "__typename": "Company",
      "certifications": Array [],
      "companyDocuments": Object {
        "nodes": Array [],
      },
      "companyMembers": Object {
        "nodes": Array [],
      },
      "companyOperationsByCompany": Object {
        "nodes": Array [],
      },
      "id": 2,
      "isProfileComplete": true,
      "name": "Company 1",
      "referenceNumber": 10001,
      "tier": "T1",
      "updatedAt": "",
    },
    "contactDetailsCollection": Object {
      "items": Array [
        Object {
          "email": "ruthtyler@bmigroup.com",
          "fullName": "Ruth Tyler",
          "phoneNumber": "273482472894",
          "subHeading": "Roofpro Marketing support",
        },
        Object {
          "email": "flatties@bmigroup.com",
          "fullName": "Flat roof hotline",
          "phoneNumber": "0044-12345667",
          "subHeading": "9 to 5 Monday to Friday",
        },
      ],
    },
    "mapsApiKey": undefined,
    "operationTypes": Array [
      Object {
        "displayName": "Flat",
        "type": "FLAT",
      },
    ],
  },
}
`;
